site/docs/3.5.1/api/python/_sources/reference/api/pyspark.SparkContext.rst.txt
..  Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

..    http://www.apache.org/licenses/LICENSE-2.0

..  Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.

.. Workaround to avoid documenting __init__.

pyspark.SparkContext
====================

.. currentmodule:: pyspark

.. autoclass:: SparkContext

   


   .. rubric:: Methods

   .. autosummary::
      
      ~SparkContext.accumulator
      ~SparkContext.addArchive
      ~SparkContext.addFile
      ~SparkContext.addJobTag
      ~SparkContext.addPyFile
      ~SparkContext.binaryFiles
      ~SparkContext.binaryRecords
      ~SparkContext.broadcast
      ~SparkContext.cancelAllJobs
      ~SparkContext.cancelJobGroup
      ~SparkContext.cancelJobsWithTag
      ~SparkContext.clearJobTags
      ~SparkContext.dump_profiles
      ~SparkContext.emptyRDD
      ~SparkContext.getCheckpointDir
      ~SparkContext.getConf
      ~SparkContext.getJobTags
      ~SparkContext.getLocalProperty
      ~SparkContext.getOrCreate
      ~SparkContext.hadoopFile
      ~SparkContext.hadoopRDD
      ~SparkContext.newAPIHadoopFile
      ~SparkContext.newAPIHadoopRDD
      ~SparkContext.parallelize
      ~SparkContext.pickleFile
      ~SparkContext.range
      ~SparkContext.removeJobTag
      ~SparkContext.runJob
      ~SparkContext.sequenceFile
      ~SparkContext.setCheckpointDir
      ~SparkContext.setInterruptOnCancel
      ~SparkContext.setJobDescription
      ~SparkContext.setJobGroup
      ~SparkContext.setLocalProperty
      ~SparkContext.setLogLevel
      ~SparkContext.setSystemProperty
      ~SparkContext.show_profiles
      ~SparkContext.sparkUser
      ~SparkContext.statusTracker
      ~SparkContext.stop
      ~SparkContext.textFile
      ~SparkContext.union
      ~SparkContext.wholeTextFiles




   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~SparkContext.PACKAGE_EXTENSIONS
      ~SparkContext.applicationId
      ~SparkContext.defaultMinPartitions
      ~SparkContext.defaultParallelism
      ~SparkContext.listArchives
      ~SparkContext.listFiles
      ~SparkContext.resources
      ~SparkContext.startTime
      ~SparkContext.uiWebUrl
      ~SparkContext.version
   
   